--- a/html/html/install_agent.html
+++ b/html/html/install_agent.html
@@ -6,7 +6,7 @@
 
 <p>Run the following command to install agent:</p>
 
-<pre><code id="code">curl --silent --show-error https://dl.exec.li/install-agent.sh "{{ .public_url }}/agent" "{{ .secret }}" > install-agent.sh && bash install-agent.sh</code></pre>
+<pre><code id="code">curl --silent --show-error https://dl.exec.li/install-agent.sh > install-agent.sh && bash install-agent.sh "{{ .public_url }}/agent" "{{ .secret }}"</code></pre>
 
 <button id="btn">Copy</button>
 
