--- a/html/html/view.html
+++ b/html/html/view.html
@@ -260,8 +260,8 @@
                         continue;
                     }
                     if (
-                        (lastSegment[lastSegment.length - 1].date - data[i].date >= 10 * 1000 && range < 7200) ||
-                        (lastSegment[lastSegment.length - 1].date - data[i].date >= 15 * 60 * 1000 && range >= 7200)
+                        (lastSegment[lastSegment.length - 1].date - data[i].date >= 10 * 1000 && range <= 7200) ||
+                        (lastSegment[lastSegment.length - 1].date - data[i].date >= 15 * 60 * 1000 && range > 7200)
                     ) {
                         segments.push([data[i]]);
                     } else {
