--- a/html/html/view.html
+++ b/html/html/view.html
@@ -4,13 +4,30 @@
 
 <a href="/" class="text-decoration-none" style="color: inherit;"><i class="bi bi-arrow-left-circle-fill"></i> Back</a>
 
-<h2 class="my-3"><i class="bi bi-circle-fill" id="online"></i> {{ .label }}</h2>
+<div class="d-flex justify-content-between align-items-center">
+    <h2 class="my-3">
+        <i class="bi bi-circle-fill" id="online"></i> {{ .label }}
+    </h2>
+    <a href="/network/{{ .id }}"><i class="bi bi-globe"></i> Network</a>
+</div>
+
 
 <style>
     [aria-busy="true"] * {
         display: none;
     }
 </style>
+
+
+<select id="range" value="300" class="w-auto">
+    <option value="300">5 Minutes</option>
+    <option value="1800">30 Minutes</option>
+    <option value="7200">2 Hours</option>
+    <option value="86400">24 Hours</option>
+    <option value="259200">3 Days</option>
+    <option value="604800">7 Days</option>
+</select>
+
 
 <article aria-busy="true">
     <header>Uptime</header>
@@ -52,15 +69,6 @@
 
     </div>
 </article>
-
-<select id="range" value="300" class="w-auto">
-    <option value="300">5 Minutes</option>
-    <option value="1800">30 Minutes</option>
-    <option value="7200">2 Hours</option>
-    <option value="86400">24 Hours</option>
-    <option value="259200">3 Days</option>
-    <option value="604800">7 Days</option>
-</select>
 
 
 
