--- a/html/html/network.html
+++ b/html/html/network.html
@@ -7,7 +7,7 @@
 <form method="get" action="">
     <select class="w-auto" name="duration" onchange="$('form').submit()" value="{{ .duration }}">
         <option value="3h">3 Hours</option>
-        <option value="30h">30 Hours</option>
+        <option value="30h" selected>30 Hours</option>
         <option value="3d">3 Days</option>
     </select>
 </form>
