--- a/html/html/view.html
+++ b/html/html/view.html
@@ -22,7 +22,7 @@
 <select id="range" value="300" class="w-auto">
     <option value="300">5 Minutes</option>
     <option value="1800">30 Minutes</option>
-    <option value="7200">2 Hours</option>
+    <option value="7200" selected>2 Hours</option>
     <option value="86400">24 Hours</option>
     <option value="259200">3 Days</option>
     <option value="604800">7 Days</option>
